@@ -2723,7 +2723,6 @@ __ZN7WebCore9FrameView27setCustomSizeForResizeEventENS_7IntSizeE
 __ZN7WebCore9FrameView30graphicsLayerForPlatformWidgetEP7WAKView
 __ZN7WebCore9FrameView32setCustomFixedPositionLayoutRectERKNS_7IntRectE
 __ZN7WebCore9FrameView33rectForViewportConstrainedObjectsERKNS_10LayoutRectERKNS_10LayoutSizeEfbNS_30ScrollBehaviorForFixedElementsE
-__ZN7WebCore9FrameView35setUseCustomFixedPositionLayoutRectEb
 __ZN7WebCore9FrameView36scheduleLayerFlushAllowingThrottlingEv
 __ZN7WebCore9PageGroup17removeVisitedLinkERKNS_3URLE
 __ZNK7WebCore10FloatPointcv7CGPointEv
